# macro-regime-nowcaster

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: fred_series.yaml  settings.yaml
notebooks/: 01_data_exploration.ipynb  02_factor_model.ipynb  03_regime_detection.ipynb  04_backtest.ipynb  05_full_pipeline.ipynb
scripts/: __init__.py  fetch_data.py  generate_readme_plots.py  run_backtest.py  run_nowcast.py  run_validation.py  train_model.py
src/: __init__.py
src/agent/: __init__.py  fed_scraper.py  narrative_agent.py  prompts.py
src/allocation/: __init__.py  backtester.py  regime_allocator.py
src/dashboard/: __init__.py  app.py
src/utils/: __init__.py  date_utils.py  logging_config.py
tests/: __init__.py  conftest.py  test_agent.py  test_allocator.py  test_data_infra.py  test_data_pipeline.py  test_date_utils.py  test_dynamic_factor_model.py  test_kalman_filter.py  test_logging_config.py  test_nowcaster.py  test_recession_probit.py  test_regime_backtest.py  test_regime_switching.py
