[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-regime-nowcaster"
version = "0.1.0"
description = "Real-time economic regime detection using dynamic factor models, Kalman filter, and Markov-switching classification"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Macro Regime Nowcaster Contributors" }]
keywords = ["macroeconomics", "nowcasting", "kalman-filter", "regime-switching", "dynamic-factor-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "fredapi>=0.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "plotly>=5.17",
    "streamlit>=1.28",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "duckdb>=0.9",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.6",
    "pre-commit>=3.5",
]
bayesian = [
    "pymc>=5.0",
    "numpyro>=0.13",
]

[project.scripts]
fetch-data = "scripts.fetch_data:main"
run-nowcast = "scripts.run_nowcast:main"
train-model = "scripts.train_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
